# Study-Assistant-RAG

./: .gitignore  README.md  frontend.html  pyproject.toml
documents/: Hashing.txt
src/studyAssistant/: config.py
src/studybuddy/: __init__.py  main.py
src/studybuddy/api/: dependencies.py
src/studybuddy/api/routes/: chat.py  documents.py  health.py
src/studybuddy/core/: rag_engine.py
src/studybuddy/models/: __init__.py  requests.py  responses.py
vector_db/: chroma.sqlite3
