[tool.poetry]
name = "studybuddy-rag-assistant"
version = "1.0.0"
description = "AI-powered study assistant with RAG capabilities"
authors = ["Thao Minh Le <118033201+minhle35@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "studybuddy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.9"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
langchain = "^0.3.25"
langchain-community = "^0.3.1"
langchain-openai = "^0.2.1"
chromadb = "^1.0.12"
openai = "^1.84.0"
pydantic = "^2.11.5"
pydantic-settings = "^2.6.1"
pypdf = "^3.17.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"